--- a/public/css/b_apply/index.css
+++ b/public/css/b_apply/index.css
@@ -10,21 +10,78 @@ body {
     -webkit-font-smoothing: antialiased;
 }
 
+.alert_back {
+    top: 0;
+    width: 100%;
+    position: absolute;
+    z-index: 999;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.3);
+}
+
+.alert_ts {
+    background: rgba(255, 255, 255, 1);
+    border-radius: 5px;
+    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.1);
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    -webkit-transform: translateX(-50%) translateY(-50%);
+    -moz-transform: translateX(-50%) translateY(-50%);
+    -ms-transform: translateX(-50%) translateY(-50%);
+    margin: 0 auto;
+    z-index: 9999;
+    padding: 0 28px;
+    display: block;
+    box-sizing: border-box;
+    border-top: 3px solid #69C72B;
+    text-align: center;
+}
+
+.alert_ts_img {
+    width: 44px;
+    height: 44px;
+    display: block;
+    margin: 18px auto 0 auto;
+}
+
+.alert_ts_txt {
+    font-size: 12px;
+    line-height: 20px;
+    margin-top: 15px;
+    color: #828282;
+    text-align: center;
+    display: inline-block;
+}
+
+.alert_ts_button {
+    width: 85px;
+    height: 30px;
+    line-height: 28px;
+    margin: 15px auto 19px auto;
+    box-sizing: border-box;
+    border: 1px solid #8ED560;
+    background-color: #F4FFED;
+    border-radius: 5px;
+    letter-spacing: 2px;
+    font-size: 14px;
+    text-align: center;
+    color: #69C72B;
+    cursor: pointer
+}
+
 .alert {
-    width: 280px;
     height: 50px;
     background: rgba(255, 255, 255, 1);
     border-radius: 5px;
     box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.1);
     line-height: 50px;
     position: absolute;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
-    margin: 30px auto 0 auto;
+    left: 50%;
+    -webkit-transform: translateX(-50%) translateY(-50%);
+    margin: 55px auto 0 auto;
     z-index: 9999;
-    padding: 0;
+    padding: 0 76px 0 0;
     display: block;
 }
 
@@ -38,7 +95,6 @@ body {
 }
 
 .alert_txt {
-    width: 190px;
     height: 50px;
     float: left;
     margin-left: 20px;
@@ -317,17 +373,17 @@ body button {
 
 .main_right_txt {
     width: 100%;
-    height: 132px;
+    height: 155px;
     font-size: 12px;
     color: rgba(153, 153, 153, 1);
     line-height: 22px;
     letter-spacing: 1px;
     margin: 21px auto 0 auto;
-    display: -webkit-box;
+    /*display: -webkit-box;
     -webkit-box-orient: vertical;
     -webkit-line-clamp: 6;
     overflow: hidden;
-    word-break: break-all;
+    word-break: break-all;*/
 }
 
 .main_right_shebei {
@@ -393,7 +449,7 @@ body button {
     font-size: 10px;
     color: #515354;
     text-align: center;
-    padding-top:10px;
+    padding-top: 10px;
 }
 
 input:-webkit-autofill,
@@ -420,8 +476,28 @@ select:-webkit-autofill {
     .selectPc {
         display: none;
     }
+    .alert_ts {
+        width: 65%;
+    }
     .alert {
         display: none;
+    }
+    .alert {
+        padding-right: 30px;
+        margin-top: 30px;
+        left: 10%;
+        width: 80%;
+        -webkit-transform: none;
+        text-align: center;
+    }
+    .alert_txt {
+        font-size: 12px;
+        margin-left: 10px;
+        display: inline-block;
+        float: none;
+    }
+    .alert_img {
+        margin-left: 15px;
     }
     #row1 {
         display: none;
