--- a/public/css/bj_login/index.css
+++ b/public/css/bj_login/index.css
@@ -461,7 +461,7 @@ body button {
 
 .tit:hover {
     color: #69c72b !important;
-    background: url("//irv.iresearch.com.cn/iResearchDataWeb/public/img/b_login/lefttwo.png") no-repeat;
+    /*background: url("//irv.iresearch.com.cn/iResearchDataWeb/public/img/b_login/lefttwo.png") no-repeat;*/
     background-position: left center;
     background-size: 20px 20px;
     text-decoration: none;
