--- a/public/css/wechat.css
+++ b/public/css/wechat.css
@@ -8,7 +8,10 @@ body {
 }
 
 .impowerBox .title {
-    display: none;
+    /*display: none;*/
+    font-size: 18px;
+    line-height: 18px;
+    padding-top: 10px
 }
 
 .impowerBox .info {
