修改跳转的错误

--- a/public/css/b_t/index.css
+++ b/public/css/b_t/index.css
@@ -377,8 +377,8 @@ a:focus, a:hover {
     text-decoration: none;
     margin-left: 5px;
 }
-.header a:visited {
-    color: #FFFFFF;
+.header a:hover, a:link, a:visited, a:focus, a:active {
+    color: #FFFFFF
 }
 .header img {
     vertical-align: middle;
